--- a/CustomConfigurationSection/App.config
+++ b/CustomConfigurationSection/App.config
@@ -1,6 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
+  <configSections>
+    <section name="mySettings" type="CustomConfigurationSection.Configuration.SpecificConfiguration, CustomConfigurationSection" />
+  </configSections>
+  
+  <startup> 
+      <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+  </startup>
+
+  <appSettings>
+    <add key="NormalConfig" value="A normal configuration setting"/>
+  </appSettings>
+
+  <mySettings size="5">
+    <path localPath="C:\\" />
+  </mySettings>
 </configuration>
